# nikame

./: .gitattributes  .gitignore  .importlinter  ALL_TASKS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  nikame.yaml  nikame_test_drive.sh  patch_auth.py  patch_fastapi.py  pyproject.toml  scenario1.yaml  scenario3.yaml  test_tui_exit.py  verify_blueprint.py  verify_codegen.py  verify_matrix.py  verify_prod.yaml  verify_wizard_output.py
.github/workflows/: ci.yml  release.yml
example_scenaios/: scenario2.yaml
examples/: nikame.yaml
examples/demos/: auto_wire_demo.py
my-app/: .env.example  nikame.yaml
my-app----[b/: .env.example  GUIDE.md  nikame.yaml
my-app----[b-[b/: .env.example  GUIDE.md  nikame.yaml
my-app----[b-[b/.github/workflows/: main.yml
my-app----[b-[b/app/: config.py  main.py  pyproject.toml  requirements.txt
my-app----[b-[b/app/routers/: health.py
my-app----[b-[b/docs/: integrations.md
my-app----[b-[b/infra/: docker-compose.yml
my-app----[b/.github/workflows/: main.yml
my-app----[b/docs/: integrations.md
my-app----[b/infra/: docker-compose.yml
my-app/.github/workflows/: main.yml
my-app/app/: config.py  main.py  pyproject.toml  requirements.txt
my-app/app/routers/: health.py
my-app/docs/: integrations.md
my-app/infra/: docker-compose.yml
nikame/: __init__.py  exceptions.py
nikame-registry/: Dockerfile  docker-compose.yml  requirements.txt
nikame-registry/app/: database.py  main.py  models.py
nikame-registry/official/: content-platform.yaml  data-pipeline.yaml  ecommerce.yaml  event-driven-api.yaml  financial-platform.yaml  gen-ai-studio.yaml  microservices-fleet.yaml  ml-platform.yaml  rag-platform.yaml  saas-starter.yaml
nikame-v2-demo/: Dockerfile
nikame-v2-demo/app/core/: security.py
nikame-v2-demo/app/db/: base.py  session.py
nikame/blueprint/: __init__.py  engine.py
nikame/cli/: __init__.py  main.py  output.py
nikame/cli/commands/: __init__.py  add.py  agent.py  copilot.py  db.py  destroy.py  diff.py  doctor.py  down.py  github.py  info.py  infra.py  init.py  list_patterns.py  login.py  logs.py  ml.py  preflight.py  regenerate.py  remove.py  rollback.py  scaffold.py  status.py  stub.py  templates.py  tunnel.py  up.py  verify.py
nikame/cli/wizard/: __init__.py  interactive.py  parser.py
nikame/codegen/: base.py  guide.py  migrations.py  ml_gateway.py  registry.py  schema_codegen.py  test_skeleton.py  wiring.py
nikame/codegen/components/: api_keys.py  audit_log.py  cron_jobs.py  graphql.py  grpc.py  health_check.py  mock_data.py  multi_tenancy.py  pubsub.py  rate_limiting.py  sse.py  storage_service.py  stripe.py  vector_search.py  webhooks.py  websocket.py
nikame/codegen/features/: __init__.py  admin.py  audit_log.py  auth.py  background_jobs.py  email.py  file_upload.py  payments.py  profiles.py  rate_limiting.py  search.py  streamlit.py  webhooks.py
nikame/codegen/integrations/: agents.py  async_inference.py  auth_events.py  base.py  broker_wiring.py  cache.py  cache_ml.py  drift.py  feature_store.py  file_pipeline.py  gpu_metrics.py  idempotency.py  matrix.py  mlflow_storage.py  orchestration.py  outbox.py  rag.py  search_sync.py  token_blacklist.py  tracing.py  tracing_llm.py
nikame/codegen/rules/: __init__.py  standards.py
nikame/codegen/wiring/: __init__.py  autowire.py  manager.py
nikame/composers/: __init__.py  docker_compose.py
nikame/config/: __init__.py  loader.py  schema.py  validator.py
nikame/copilot/: agent.py  context.py  utils.py
nikame/core/: diff.py  errors.py  ports.py  sentinel.py
nikame/engines/: doctor.py  env.py  patcher.py  rollback.py  scaffold.py  verify.py
nikame/infra/: docker.py
nikame/mlops/: __init__.py  hardware.py  models.py  serving.py
nikame/modules/: __init__.py  base.py  registry.py
nikame/registry/: client.py
nikame/tui/: app.py  theme.py
nikame/utils/: __init__.py  auth.py  docker.py  file_writer.py  git.py  github_client.py  logger.py  templating.py
output_scenario1/: .env.example  GUIDE.md  nikame.yaml
output_scenario1/app/: Dockerfile  config.py  main.py  requirements.txt
output_scenario1/docs/: integrations.md
output_scenario1/infra/: docker-compose.yml
output_scenario2/: .env.example  GUIDE.md  nikame.yaml
output_scenario2/app/: config.py  main.py  requirements.txt
output_scenario2/docs/: integrations.md
output_scenario2/infra/: docker-compose.yml
output_scenario3/: .env.example  GUIDE.md  nikame.yaml
output_scenario3/app/: config.py  main.py
output_scenario3/docs/: integrations.md
output_scenario3/infra/: docker-compose.yml
projects/tests/: custom_hybrid.yaml  matrix_tester.py
tests/: conftest.py
tests/generation/: __init__.py  conftest.py  test_autowire_engine.py  test_module_matrix.py  test_rules_engine.py
tests/integration/: test_cli.py  test_golden_patterns.py  test_init_flow.py
tests/verification/: test_ml_no_rag.yaml  test_saas_with_rag.yaml
(+513 files in other folders)
