[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nikame"
version = "0.1.9"
description = "Describe your infrastructure. NIKAME builds it."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "omdeepb69" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "questionary>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "networkx>=3.1",
    "rich>=13.0",
    "docker>=7.0",
    "httpx>=0.25",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-pyyaml",
    "types-docker",
]
cloud = [
    "boto3>=1.29",
    "kubernetes>=28.0",
]
ml = [
    "huggingface_hub>=0.19",
    "litellm>=1.10",
]

[project.scripts]
nikame = "nikame.cli.main:cli"

[project.entry-points."nikame.plugins"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T20", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "E501", "S603", "S607", "S701", "B904", "RUF012", "S104", "B007", "S105", "F401", "E402", "W291", "B006", "E701", "F841", "W293", "RUF013"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["nikame"]
